<resources>
    <string name="app_name">Make-a-Wishlist</string>
    <string name="submit">Submit</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="link_to_the_item">Link to the Item</string>
    <string name="item">Item</string>
    <string name="price_holder">Price Holder</string>
    <string name="url_link">URL Link</string>
</resources>