<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding = "10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/itemName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:text="@string/price_holder"
        android:gravity="end|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/url"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/url_link"
        android:gravity="end|center_vertical"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />

</androidx.constraintlayout.widget.ConstraintLayout>