<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/itemsRv"
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_height="0dp"
    tools:listitem="@layout/list_item"
    app:layout_constraintBottom_toTopOf="@id/EnterName"
        />

    <Button
        android:id="@+id/moreButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/EnterName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint = "@string/item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemsRv"
        app:layout_constraintBottom_toTopOf="@id/EnterURL"
        android:importantForAutofill="no"
        android:inputType = "text" />

    <EditText
        android:id="@+id/EnterNumber"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint = "@string/price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemsRv"
        app:layout_constraintBottom_toTopOf="@id/moreButton"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/EnterURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint = "@string/link_to_the_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:importantForAutofill="no"
        android:inputType = "textUri"/>


</androidx.constraintlayout.widget.ConstraintLayout>